--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "5.3.0",
     "typescript": "4.3.2",
-    "web-vitals": "1.1.2"
+    "web-vitals": "1.1.2",
+    "web3": "1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
