--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "5.13.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
+    "@textile/hub": "6.2.0",
     "@types/jest": "26.0.23",
     "@types/node": "12.20.15",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.7",
-    "ipfs-http-client": "50.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
