--- a/package.json
+++ b/package.json
@@ -17,17 +17,15 @@
     "react-circle-modal": "0.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
     "styled-components": "5.3.0",
     "typescript": "4.3.2",
     "web-vitals": "1.1.2",
     "web3": "1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +47,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "5.1.7",
-    "@types/styled-components": "5.1.10"
+    "@types/styled-components": "5.1.10",
+    "@vitejs/plugin-react": "2.2.0",
+    "vite": "3.2.4",
+    "vite-plugin-svgr": "2.2.2",
+    "vite-tsconfig-paths": "3.6.0"
   }
 }
